Src/FilterEngine/lexer.cpp
/* Generated by re2c 3.1 on Fri May  2 20:48:33 2025 */
#line 1 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
#line 6 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"


#include "parser.h"
#include "parser_internal.h"
#include <string>
#include <iostream>

YYSTYPE yylval;

void lexerError(const char* msg) {
    std::cerr << "Lexer Error: " << msg << std::endl;
}

char* yycursor;

int yylex()
{
begin:
    char* YYMARKER = nullptr;
    char* YYCURSOR = yycursor;
    char* YYLIMIT = yycursor + strlen(yycursor);
    
#line 27 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy3;
		case '!': goto yy5;
		case '"': goto yy6;
		case '(': goto yy7;
		case ')': goto yy8;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy9;
		case '<': goto yy11;
		case '=': goto yy13;
		case '>': goto yy14;
		case 'A':
		case 'a': goto yy16;
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		case 'F':
		case 'f': goto yy20;
		case 'N':
		case 'n': goto yy21;
		case 'O':
		case 'o': goto yy22;
		case 'T':
		case 't': goto yy23;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy47;
			goto yy1;
	}
yy1:
	++YYCURSOR;
yy2:
#line 53 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ lexerError("?????"); return 0; }
#line 115 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy3:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
#line 28 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ goto begin; }
#line 128 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy24;
		default: goto yy2;
	}
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x00) {
		if (YYLIMIT <= YYCURSOR) goto yy2;
		goto yy25;
	}
	goto yy26;
yy7:
	++YYCURSOR;
#line 50 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return LPAREN; }
#line 146 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy8:
	++YYCURSOR;
#line 51 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return RPAREN; }
#line 151 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy9;
		default: goto yy10;
	}
yy10:
#line 38 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ yylval.integer = std::stoi(std::string((const char*)yycursor, YYCURSOR - yycursor)); return INTEGER_LITERAL; }
#line 170 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy28;
		default: goto yy12;
	}
yy12:
#line 46 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return LT; }
#line 180 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy13:
	++YYCURSOR;
#line 44 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return EQ; }
#line 185 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy29;
		default: goto yy15;
	}
yy15:
#line 48 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return GT; }
#line 195 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'N':
		case 'n': goto yy30;
		default: goto yy19;
	}
yy17:
#line 34 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{
                          yylval.string = std::string((const char*)yycursor, YYCURSOR - yycursor);
                          return IDENTIFIER;
                        }
#line 210 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy18:
	yych = *++YYCURSOR;
yy19:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		default: goto yy17;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'A':
		case 'a': goto yy31;
		default: goto yy19;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'O':
		case 'o': goto yy32;
		default: goto yy19;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'R':
		case 'r': goto yy33;
		default: goto yy19;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'R':
		case 'r': goto yy35;
		default: goto yy19;
	}
yy24:
	++YYCURSOR;
#line 45 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return NE; }
#line 316 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy25:
	yych = *++YYCURSOR;
yy26:
	switch (yych) {
		case '"': goto yy27;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy48;
			goto yy25;
	}
yy27:
	++YYCURSOR;
#line 39 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{
                          std::string str((const char*)yycursor + 1, YYCURSOR - yycursor - 2);
                          yylval.string = str;
                          return STRING_LITERAL;
                      }
#line 334 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy28:
	++YYCURSOR;
#line 47 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return LE; }
#line 339 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy29:
	++YYCURSOR;
#line 49 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return GE; }
#line 344 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'D':
		case 'd': goto yy36;
		default: goto yy19;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'L':
		case 'l': goto yy38;
		default: goto yy19;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'T':
		case 't': goto yy39;
		default: goto yy19;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		default: goto yy34;
	}
yy34:
#line 30 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return OR; }
#line 440 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'U':
		case 'u': goto yy41;
		default: goto yy19;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		default: goto yy37;
	}
yy37:
#line 29 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return AND; }
#line 520 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'S':
		case 's': goto yy42;
		default: goto yy19;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		default: goto yy40;
	}
yy40:
#line 31 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return NOT; }
#line 600 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'E':
		case 'e': goto yy43;
		default: goto yy19;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00: goto yy17;
		case 'E':
		case 'e': goto yy45;
		default: goto yy19;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		default: goto yy44;
	}
yy44:
#line 32 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ yylval.boolean = true; return TRUE_LITERAL; }
#line 688 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy18;
		default: goto yy46;
	}
yy46:
#line 33 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ yylval.boolean = false; return FALSE_LITERAL; }
#line 760 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy47:
#line 52 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"
	{ return 0; }
#line 764 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.cpp"
yy48:
	YYCURSOR = YYMARKER;
	goto yy2;
}
#line 54 "E:\\dev\\winmerge\\Src\\FilterEngine\\lexer.re"

}